2008-10-12  Stephen Leake  <stephen_leake@member.fsf.org>

	* progmodes/ada-mode.el (ada-get-indent-end, ada-goto-matching-start):
	Add support for extended return statement.

	* progmodes/ada-xref.el (ada-gnat-parse-gpr): Don't reverse src-dir
	and obj-dir; keep user order.

2008-10-12  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Update.

	* simple.el (shell-delimiter-argument-list, shell-file-name-chars)
	(shell-file-name-quote-list): Declare.

2008-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-service-emacs, dbus-path-emacs): New defconst.

2008-10-12  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): If toolbar is disabled but ought to
	be initialized, call tool-bar-setup.

	* tool-bar.el (tool-bar-setup): Variable deleted.
	(tool-bar-setup): Set it up unconditionally.

	* faces.el (x-create-frame-with-faces): Don't call tool-bar-setup.

	* progmodes/grep.el (grep-mode-tool-bar-map): Check if
	tool-bar-map has been initialized before setting it up.

	* progmodes/compile.el (compilation-mode-tool-bar-map): Check if
	tool-bar-map has been initialized before setting it up.

2008-10-11  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/warnings.el (display-warning): Issue a message if
	called during daemon initialization.

	* tool-bar.el (tool-bar-local-item)
	(tool-bar-local-item-from-menu): Put the check for number of
	display colors into the image expression.
	(tool-bar-setup): Don't be a no-op on ttys.

	* info.el (info-tool-bar-map): Initialize it unconditionally.

	* progmodes/gud.el (gud-tool-bar-map): Initialize it
	unconditionally.

	* progmodes/grep.el (grep-mode-tool-bar-map): Initialize it
	unconditionally.

	* progmodes/compile.el (compilation-mode-tool-bar-map): Initialize
	it unconditionally.

2008-10-11  Romain Francoise  <romain@orebokech.com>

	* help.el (view-lossage): Fix docstring, lossage is now 300 keys.
	* kmacro.el (kmacro-edit-lossage): Ditto.
	* edmacro.el (edit-kbd-macro): Ditto.